@@ -1,3 +1,5 @@
+Fixed: dragging an object through a collision still leaves a path drawn, solved by stopping the path after collision
+Fixed: "return body" after a collision causes a jump in the path drawn, solved by clearing the path after "return body"
 # 0.0.13 (47777) Jan 7, 2011
 Added a grid
 Added a "return object" button that allows the user to bring back a destroyed or lost object
